ajustes em livroController para documentação Swagger
